test/invalid/syntactic/empty_typing.sysml
// INVALID: typing operator with no type name
// EXPECTED: Parse error
part x : ;
